--- a/src/components/BarChart/BarChart.module.scss
+++ b/src/components/BarChart/BarChart.module.scss
@@ -12,5 +12,10 @@
 }
 
 .chart__noData {
+  width: 100%;
+  height: 100%;
   color: rgba(0, 0, 0, 0.12);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
